--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "ttms-web-promo",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^4.4.1",
+    "css-loader": "^3.4.0",
     "node-sass": "^4.13.0",
     "sass": "^1.24.0",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
