sass and web dev server setting

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "web-dev-server": "npx webpack-dev-server --content-base ./dist"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +16,11 @@
     "file-loader": "^5.0.2",
     "node-sass": "^4.13.0",
     "sass": "^1.24.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "lodash": "^4.17.15"
