--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "bootstrap": "^4.4.1",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
+    "inline-source-map": "^0.6.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
     "sass": "^1.24.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
